Create User Notifications, Get notification and this count, Automatic read notifications and oth.
